--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 <body>
+<h1>UFA Locations</h1>
 <div class="container">
   <div class="sidebar" id="sidebar">
     <div class="expand-btn" id="expandBtn" title="Collapse">
