--- a/index.html
+++ b/index.html
@@ -170,6 +170,25 @@
       .location-item strong { font-size: 16px; }
       .autocomplete-suggestion { font-size: 15px; }
     }
+
+    body, html, 
+    .sqs-block, .sqs-layout, .section, .content-wrapper, 
+    .main-content, .page-section, .site-wrapper, 
+    #page, .page, .page-content {
+      margin-top: 0 !important;
+      padding-top: 0 !important;
+    }
+
+    .header-bar {
+      margin-top: 1em !important; /* or try 32px or 24px for finer control */
+      padding-top: 0em;
+    }
+
+    .container {
+      margin-top: 0 !important;
+      padding-top: 0 !important;
+    }
+
   </style>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
